@@ -51,6 +51,7 @@
         </SPAN>
 
         <!-- preprocessor statements -->
+        <SEQ TYPE="KEYWORD2">##</SEQ>
         <EOL_SPAN TYPE="KEYWORD2" DELEGATE="c::CPP">#</EOL_SPAN>
 
         <EOL_SPAN TYPE="COMMENT2">//</EOL_SPAN>
